--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -43,10 +43,10 @@
         android:background="@null"
         android:contentDescription="@string/instaPic" />
 
-    <VideoView
-        android:id="@+id/ivVideo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <!--<VideoView-->
+        <!--android:id="@+id/ivVideo"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content" />-->
 
 
     <ImageView
